# xpg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.sh  imgui.sh  notes.txt  pyproject.toml  shaders.py  slang.txt  todo.txt
.github/workflows/: ambra_pypi.yml  build.yml  build_wheels.yml  pypi.yml
ambra/: README.md  pyproject.toml  todo.txt
ambra/ambra/: __init__.py  camera.py  config.py  ffx.py  geometry.py  gpu_property.py  gpu_sorting.py  grid.py  headless.py  icons_fontawesome.py  keybindings.py  lights.py  marching_cubes.py  materials.py  primitives2d.py  primitives3d.py  property.py  reflection.py  renderer.py  renderer_frame.py  scene.py  server.py  shaders.py  stages.py  tracer_property.py  transform.py  transform2d.py  transform3d.py  viewer.py  viewport.py  widgets.py
ambra/ambra/render/: uploadable_buffer.py
ambra/ambra/scene/: __init__.py  primitives.py
ambra/ambra/scene2d/: __init__.py  primitives.py
ambra/ambra/scene3d/: __init__.py  primitives.py
ambra/ambra/shaders/: basic.slang  common.slang  reflection.py
ambra/ambra/shaders/2d/: basic.slang  basic_texture.slang  common_object.slang  object.slang  scene.slang
ambra/ambra/shaders/3d/: basic.slang  basic_texture.slang  colormap.slang  common_object.slang  cube.slang  ddp_composite.slang  ddp_init.slang  grid.slang  ibl.slang  lines.slang  lines_depth.slang  mesh.slang  mesh_animated.slang  mesh_depth.slang  object.slang  points.slang  scene.slang  scene_depth.slang  spheres.slang  spheres_depth.slang  utils.slang  voxels.slang  wboit_composite.slang
ambra/ambra/shaders/3d/gaussian_splatting/: d2g.comp.slang  dist.comp.slang  shaderio.h.slang  threedgs.h.slang  threedgs_particles_storage.h.slang  threedgs_raster.frag.slang  threedgs_raster.mesh.slang  threedgs_raster.vert.slang  wireframe.h.slang
ambra/ambra/shaders/3d/marching_cubes/: check_surface.slang  common.slang  compact.slang  marching_cubes.slang  tables.slang
ambra/ambra/shaders/3d/path_tracer/: brdf.slang  path_tracer.slang  ray.slang
ambra/ambra/shaders/GPUSorting/: DeviceRadixSort.slang  OneSweep.slang  SortCommon.slang  SweepCommon.slang
ambra/ambra/shaders/ffx/: ffx_common_types.h  ffx_core.h  ffx_core_slang.h  ffx_spd_downsample_pass.slang
ambra/ambra/shaders/ffx/spd/: ffx_spd.h  ffx_spd_callbacks_slang.h
ambra/ambra/shaders/vk_3d_gaussian_splatting/: dist.comp.slang  shaderio.h  shaderio.h.slang  threedgs.h.slang  threedgs_particles_storage.h.slang  threedgs_raster.frag.slang  threedgs_raster.mesh.slang  threedgs_raster.vert.slang  wireframe.h.slang
ambra/ambra/tracer/: __init__.py  _config.py  _global.py  _protocol.py  _queue.py  _serializer.py  _sqlite_subscriber.py  _subscriber.py  _tcp_subscriber.py  _tracer.py
ambra/ambra/utils/: descriptors.py  gpu.py  gpu_property.py  hook.py  io.py  lru_pool.py  profile.py  ring_buffer.py  threadpool.py  uploadable_buffer.py
ambra/examples/: client.py  ex_bulk.py  ex_camera_control.py  ex_colors.py  ex_cubemap.py  ex_depth_camera.py  ex_depth_map.py  ex_depth_map_phast.py  ex_editor.py  ex_enabled_range.py  ex_fonts.py  ex_gaussian_splatting.py  ex_geometry.py  ex_grid.py  ex_image2d.py  ex_image3d.py  ex_image_sequence.py  ex_imgui.py  ex_implot.py  ex_inspect_image.py  ex_instancing.py  ex_lights.py  ex_load_gltf.py  ex_marching_cubes.py  ex_materials.py  ex_mips.py  ex_mips_property.py  ex_multiviewport.py  ex_pbr_model.py  ex_primitives2d.py  ex_primitives3d.py  ex_properties.py  ex_sequence.py  ex_sorting.py  ex_streaming.py  ex_tracer_client.py  ex_tracer_server.py  ex_video.py  ex_voxels.py  fonts.py  (+3 more)
ambra/examples/common/: gltf.py
apps/: CMakeLists.txt  bigimage.cpp  descs.cpp  imgui_spectrum.h  plot.cpp  roboto-medium.h  sequence.cpp
apps/bigimage/: CMakeLists.txt  bigimage.cpp  chunk_cache.cpp  chunk_cache.h  zmip.cpp  zmip.h
apps/descs/: CMakeLists.txt  descs.cpp
apps/minimal/: minimal.cpp
apps/plot/: CMakeLists.txt  imgui_spectrum.h  plot.cpp  roboto-medium.h
apps/raytrace/: CMakeLists.txt  raytrace.cpp
apps/scene3d/: CMakeLists.txt  scene3d.cpp
apps/sequence/: CMakeLists.txt  sequence.cpp
apps/shader_reflection/: CMakeLists.txt  reflection_printing.h  shader_reflection.cpp
apps/shaders/: bigimage.frag.slang  bindless.frag.glsl  bindless.vert.glsl  common.glsl  refl.vert.glsl
apps/spirvrefl/: CMakeLists.txt  spirvrefl.cpp
apps/sync/: CMakeLists.txt  sync.cpp
ci/: install-vulkan.ps1
lib/: array.h  bounded_lru_cache.h  buffered_stream.h  defines.h  gfx.h  graph.h  graph_simpler.h  hashmap.h  imgui_impl.h  log.h  platform.h  pool.h  result.h  threading.h
pipes/: colors.py  gui.py  pipelines.py  pipes.py  plot.py  render.py  samples.py
python/: app.py  basic.py  camera.py  example.py  gfxmath.py  goal.py  headless_compute.py  headless_graphics.py  image_upload.py  log_capture.py  math.py  minimal.py  module.cpp  multi_device.py  pipelines.py  raytrace.py  refl.py  reflection.py  renderutils.py  sequence.py  sync_upload.py  voxels.py  warp_interop.py
python/shaders/: color.frag.slang  color.vert.slang  sequence.frag.slang  (+2 more)
scripts/: extract.py  gen_imgui.py  gen_implot.py  gen_math.py  imgui.bat  shaders.py  spirv.py  spirv_constants.py
shaders/: basic.frag  basic.frag.glsl  basic.vert  bigimage.comp.slang  bigimage.frag.slang  bigimage.vert.slang  bindless.frag.slang  bindless.vert.slang  color.frag.glsl  color.frag.slang  color.vert.glsl  color.vert.slang  raytrace.comp.slang  types.h  voxels.frag.slang  voxels.vert.slang
src/: array.h  buffered_stream.h  defines.h  gfx.h  main.cpp  platform.h  threading.h
tracer/: tracer.h  tracer_todo.txt
tracer/example_c/: CMakeLists.txt  main.c  tracer_impl.c  worker.c  worker.h
tracer/example_cpp/: .gitignore  CMakeLists.txt  main.cpp  tracer_impl.cpp  worker.cpp  worker.h
tracer/tests/: CMakeLists.txt  test_locks.cpp  test_mpsc.c  test_ring.cpp  test_socket.cpp  test_tracer.cpp  testing.h
tracing/c/examples/: CMakeLists.txt  example_client.c  example_server.c  example_tracer.c  example_tracer.cpp
tracing/c/tests/: CMakeLists.txt  test_mpsc.c
(+58 files in other folders)
