[build-system]
requires = ["scikit-build-core >=0.4.3", "typing_extensions >= 4.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyxpg"
version = "0.0.1"
description = "XPG python bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Dario Mylonopoulos", email = "ramenguy99@gmail.com" },
]
classifiers = [
    "License :: MIT",
]

[project.urls]
Homepage = "https://github.com/ramenguy99/xpg"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "python-build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# Configure
#cmake.define = { XPG_BUILD_APPS = "OFF", XPG_BUILD_PYTHON = "ON", XPG_BUILD_SLANG = "ON" }
cmake.define = { XPG_BUILD_APPS = "OFF", XPG_BUILD_PYTHON = "ON", XPG_BUILD_SLANG = "OFF" }

[tool.cibuildwheel]
build-verbosity = 1
archs = ["auto64"]
#build = ["cp38-*" ]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]

# Install dependencies on manylinux
[tool.cibuildwheel.linux]
before-all = [ "yum install -y libXcursor-devel libXi-devel libXinerama-devel libXrandr-devel", ]

# Install dependencies on musllinux
[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [ "apk add xorg-server-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev" ]

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"