[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "ambra"
version = "0.0.1"
requires-python = ">= 3.8"
license = "Apache-2.0"
dependencies = [
    "numpy>=1.20",      # Required for numpy.typing
    "pyglm>=2,<3",
    "watchfiles>=1,<2",
#   "pyxpg==0.0.3",
]

[tool.mypy]
# Python <=3.9 has issues with numpy shapes
# Python <=3.11 has issues with assignment from memoryview to Buffer
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 119
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = [ "E741", "E501", "B019" ] # Ambigous variable name, I l O variable names