[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambra"
version = "0.0.1"
description = "Ambra 3D Viewer"
requires-python = ">= 3.8"
authors = [
    { name = "Dario Mylonopoulos", email = "ramenguy99@gmail.com" },
]
license = "MIT"
dependencies = [
    "numpy>=1.22",      # Required for numpy.typing
    "pyglm>=2,<3",
    "platformdirs>=4,<5",
    "pyxpg",
]

[project.urls]
Homepage = "https://github.com/ramenguy99/xpg"

[tool.hatch.build.targets.sdist]
exclude = [
    "*.bat",
    "*.sh",
    "todo.txt",
    "priv/",
]

[tool.mypy]
# Python <=3.9 has issues with numpy shapes
# Python <=3.11 has issues with assignment from memoryview to Buffer
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 119
target-version = "py38"

[tool.ruff.lint]
select = ["ALL" ]
ignore = [
# TODO:
    # Enable also for examples

    # Documentation
    "D", # missing documentation

# Disabled:
    # Errors
    "E501", # line too long
    "E741", # ambigous variable name, I l O variable names

    # Bugbear
    "B019", # use of lru_cache or cache

    # Complexity
    "ERA001",  # commented out code
    "C901",    # too many statements
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR1714", # merge comparisons in set
    "PLR2004", # magic constant
    "PLR5501", # use elif instead of else then if
    "FBT",     # boolean as arguments and parameters
    "RET505",  # unnecessary else after return
    "PLW3301", # nested max calls
    "PLW0603", # statement modifying globals
    "SIM108", # use ternary operator instead of if-else
    "SIM110",  # replace for with all
    "SIM114",  # combine if using or

    # Commas
    "COM812", # missing trailing comma (conflicts with formatter)

    # Comments fixes and todos
    "FIX002", # comment contains TODO
    "FIX004", # comment contains HACK
    "TD",     # comment contains TODO
    "PGH003", # type ignore without code

    # Annotations
    "ANN", # missing type annotations
    "FA100", # from __future__ import annotations
    "PYI041", # redundant int | float type
    "TC001", # import only used for type-checking

    # Imports
    "TID252", # prefer absolute imports

    # Arguments
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "ARG003", # unused class method argument

    # Builtin shadowing
    "A001", # variable shadowing builtin
    "A002", # function shadowing builtin
    "A004", # import shadowing builtin

    # Security
    "S101", # assert
    "S301", # pickle load

    # Exceptions
    "EM101", # exception must not use string literal
    "EM102", # exception must not use f-string literal
    "TRY003", # exception with long message
    "BLE001", # do not catch blind exception
    "SIM105", # use contextlib suppress

    # Dataclass
    "RUF009", # Function call in dataclass defaults (we use it with frozen types)
]
